Fixed misalignment in Registration & Login forms

--- a/collaborative/src/components/Form/Form.module.css
+++ b/collaborative/src/components/Form/Form.module.css
@@ -8,13 +8,13 @@
   gap: 20px;
 }
 
-.column {
+.Column {
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
 
-.row {
+.Row {
   display: flex;
   gap: 15px;
 }
